--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+ /* Game Play Page */
 body {
     margin: 0;
     padding: 0;
@@ -18,7 +19,7 @@ body {
 }
 
 header {
-    background-color: #2c3e50;
+    background-color: #20afc9;
     color: #ecf0f1;
     padding: 20px;
     text-align: center;
@@ -52,3 +53,62 @@ header {
     display: none;
     border-top: 1px solid #ccc;
 }
+
+.difficulty-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
+
+.difficulty-button {
+    background-color: #20afc9;
+    color: #fff;
+    border: none;
+    padding: 20px 40px;
+    font-size: 1.5em;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.user-input {
+    /* display: none; */
+    margin-top: 20px;
+    text-align: left;
+}
+
+.user-input h3 {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+
+.user-input label {
+    margin-right: 20px;
+    display: inline-block;
+}
+
+.user-input input[type="checkbox"],
+.user-input input[type="radio"] {
+    margin-right: 5px;
+}
+
+button {
+    display: inline-block;
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 1em;
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+button:hover {
+    background-color: #2980b9;
+    transform: translateY(-3px);
+}
+
